# Free_Energy_Principle

./: .dockerignore  .gitignore  Agent.cpp  Agent.h  CMakeLists.txt  Dockerfile  Environment.cpp  Environment.h  MainWindow.cpp  MainWindow.h  README.md  main.cpp
